<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_ds"
            android:title="@string/nav_ds"
            android:icon="@drawable/ic_launcher_foreground"/>

        <item android:id="@+id/nav_ls_muon"
            android:title="@string/nav_ls_muontra"
            android:icon="@drawable/ic_launcher_foreground"/>

        <item android:id="@+id/nav_trasach"
            android:title="@string/nav_tra_sach"
            android:icon="@drawable/ic_launcher_foreground"/>

    </group>



    <item android:id="@+id/nav_space1"
        android:title=""
        android:enabled="false"
        android:icon="@android:color/transparent"/>

    <item android:id="@+id/nav_space2"
        android:title=""
        android:enabled="false"
        android:icon="@android:color/transparent"/>

    <item android:id="@+id/nav_space3"
        android:title=""
        android:enabled="false"
        android:icon="@android:color/transparent"/>

    <item android:id="@+id/nav_space4"
        android:title=""
        android:enabled="false"
        android:icon="@android:color/transparent"/>



    <item android:title="@string/nav_taikhoan">
        <menu>

            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_tt"
                    android:title="@string/nav_tt"
                    android:icon="@drawable/ic_launcher_foreground"/>

                <item android:id="@+id/nav_doimk"
                    android:title="@string/nav_doimk"
                    android:icon="@drawable/ic_launcher_foreground"/>

                <item android:id="@+id/nav_dx"
                    android:title="@string/nav_dx"
                    android:icon="@drawable/ic_launcher_foreground"/>
            </group>

        </menu>
    </item>

</menu>